--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
         <nav>
             <a  href="index.html"><img class="logo" src="assets/samlogo.png" alt="samthemogul logo"></a>
             <ul class="menu-links">
-                <li class="menu-items"><a class="active-nav-link" href="index.html">Home</a></li>
-                <li class="menu-items ports"><a href="portfolio.html">Portfolio</a></li>
+                <li class="menu-items"><a href="index.html">Home</a></li>
+                <li class="menu-items ports"><a class="active-nav-link" href="portfolio.html">Portfolio</a></li>
                 <li class="menu-items"><a href="about.html">About Me</a></li>
                 <li class="menu-items"><a href="contact.html">Contact</a></li>
             </ul>
