--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 <div class="skills-con">
                     <h2>Skills I have.</h2>
                     <div class="skillset">
-                        <span>Frontend Development</span>
+                        <span>Frontend Dev</span>
                         <span>UI Design</span>
                         <span>UX Design</span>
                         <span>Graphic Design</span>
                         <span>SEO</span>
                         <span>Digital Marketing</span>
                         <span>Version Control</span>
-                        <span>Backend Development</span>
+                        <span>Backend Dev</span>
                         <span>DBM</span>
                     </div>
                 </div>
