--- a/about.html
+++ b/about.html
@@ -111,10 +111,10 @@
                     <p>&copy; Sam The Mogul 2023</p>
                 </div>
                 <ul>
-                    <li><a href="www.facebook.com/sam_themogul"><i class="fa-brands fa-facebook-f "></i></a></li>
-                    <li><a href="www.twitter.com/sam_themogul"><i class="fa-brands fa-x-twitter"></i></a></li>
-                    <li><a href="www.github.com/samthemogul"><i class="fa-brands fa-github"></i></a></li>
-                    <li><a href="www.linkedin.com/in/samthemogul"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/sam_themogul"><i class="fa-brands fa-facebook-f "></i></a></li>
+                    <li><a href="https://www.twitter.com/sam_themogul"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href="https://www.github.com/samthemogul"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/samthemogul"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </footer>
