--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             Sam The Mogul
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <link rel="icon" href="assets/samlogo_shape.png" type="image/x-icon">
         <link rel="stylesheet" href="home.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
