--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <title>
             Who Is Sam The Mogul?
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <link rel="icon" href="assets/samlogo_shape.png" type="image/x-icon">
         <link rel="stylesheet" href="home.css">
         <link rel="stylesheet" href="about.css">
