--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <section id="contact-me" class="contact-section">
             <h2 class="conv-header">Let's have a conversation</h2>
             <p>Do you need a website, or you just want to say HI? Let's talk</p>
-            <form>
+            <form onsubmit="sendEmail(); reset(); return false">
                 <div class="name_and_mail">
                     <div class="name-input">
                         <label for="name">Your Name</label>
@@ -174,7 +174,7 @@
                     <label for="message">Your Message</label>
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Hi, we need a website for our company. How soon can you build one for us?"></textarea>
                 </div>
-                <button type="button" onclick="sendEmail()" class="contact-submit">Send Message</button>
+                <button type="submit" class="contact-submit">Send Message</button>
             </form>
         </section>
 
