--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <a class="btn hire" href="contact.html">Hire Me</a>
             </div>
-            <img class="banner-pic" src="assets/newprofile.svg" alt="">
+            <img class="banner-pic" src="assets/profile_picture.svg" alt="">
             <div class="social-icons">
                 <a href="https://www.facebook.com/samthemogul"><i class="fa-brands fa-facebook-f "></i></a>
                 <a href="https://www.twitter.com/sam_themogul"><i class="fa-brands fa-x-twitter"></i></a>
