--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <!-- About Section -->
 
         <section class="about-me-con">
-            <img class="about-pic" src="assets/newprofile.svg" alt="Sam the mogul">
+            <img class="about-pic" src="assets/profile-pic.svg" alt="Sam the mogul">
             <div class="about-text">
                 <h2 class="about-head">Nice to Meet You!</h2>
                 <p class="about-p">I'm Samuel Emeka, a full-stack developer and UI/UX designer with a deep love for aesthetics. My mission? Simple &dash; to help businesses craft digital
